--- a/MUASAM/MUASAM/MUASAM.csproj
+++ b/MUASAM/MUASAM/MUASAM.csproj
@@ -71,6 +71,12 @@
     <Compile Include="DBSQLServerUtils.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="Donhang.cs" />
+    <Compile Include="Giadung.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Giadung.Designer.cs">
+      <DependentUpon>Giadung.cs</DependentUpon>
+    </Compile>
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sanpham.cs" />
+    <EmbeddedResource Include="Giadung.resx">
+      <DependentUpon>Giadung.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +120,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="img\Surrender.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\Surrender %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo for sales company and bag or e-commerce.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo for sales company and bag or e-commerce1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo for sales company and bag or e-commerce %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
