--- a/MUASAM/MUASAM/MUASAM.csproj
+++ b/MUASAM/MUASAM/MUASAM.csproj
@@ -65,17 +65,35 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="zxing, Version=0.16.8.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZXing.Net.0.16.8\lib\net45\zxing.dll</HintPath>
+    </Reference>
+    <Reference Include="zxing.presentation, Version=0.16.8.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZXing.Net.0.16.8\lib\net45\zxing.presentation.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CTDH.cs" />
     <Compile Include="DBSQLServerUtils.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="Donhang.cs" />
+    <Compile Include="Xemthem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Xemthem.Designer.cs">
+      <DependentUpon>Xemthem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Giadung.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Giadung.Designer.cs">
       <DependentUpon>Giadung.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CTSanPham.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CTSanPham.Designer.cs">
+      <DependentUpon>CTSanPham.cs</DependentUpon>
     </Compile>
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
@@ -88,8 +106,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sanpham.cs" />
+    <EmbeddedResource Include="Xemthem.resx">
+      <DependentUpon>Xemthem.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Giadung.resx">
       <DependentUpon>Giadung.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CTSanPham.resx">
+      <DependentUpon>CTSanPham.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
