--- a/MUASAM/MUASAM/MUASAM.csproj
+++ b/MUASAM/MUASAM/MUASAM.csproj
@@ -73,7 +73,49 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Account.Designer.cs">
+      <DependentUpon>Account.cs</DependentUpon>
+    </Compile>
     <Compile Include="CTDH.cs" />
+    <Compile Include="XemthemTimkiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XemthemTimkiem.Designer.cs">
+      <DependentUpon>XemthemTimkiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="XemthemLS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XemthemLS.Designer.cs">
+      <DependentUpon>XemthemLS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="XemthemYeuThich.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XemthemYeuThich.Designer.cs">
+      <DependentUpon>XemthemYeuThich.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Timkiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Timkiem.Designer.cs">
+      <DependentUpon>Timkiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Lichsudonhang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lichsudonhang.Designer.cs">
+      <DependentUpon>Lichsudonhang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="YeuthichUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YeuthichUI.Designer.cs">
+      <DependentUpon>YeuthichUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dathang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,8 +223,29 @@
     <Compile Include="Sanpham.cs" />
     <Compile Include="Xuly_Data.cs" />
     <Compile Include="Yeuthich.cs" />
+    <EmbeddedResource Include="Account.resx">
+      <DependentUpon>Account.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Barcode.resx">
       <DependentUpon>Barcode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XemthemTimkiem.resx">
+      <DependentUpon>XemthemTimkiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XemthemLS.resx">
+      <DependentUpon>XemthemLS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XemthemYeuThich.resx">
+      <DependentUpon>XemthemYeuThich.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Timkiem.resx">
+      <DependentUpon>Timkiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Lichsudonhang.resx">
+      <DependentUpon>Lichsudonhang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="YeuthichUI.resx">
+      <DependentUpon>YeuthichUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dathang.resx">
       <DependentUpon>Dathang.cs</DependentUpon>
